# ai-slide-generator

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  cli.py  pyproject.toml  requirements.txt
assets/: asset_index.json
demos/benchmark/: kyoto_weekend.benchmark.json  python_intro.benchmark.json
demos/pptx/: Python入门30分钟.pptx  Rust重写订单系统.pptx  coffee_beans.pptx
demos/specs/: coffee_beans.deck.json  kyoto_weekend.deck.json
demos/自检输出/: README.md
docs/: ARCHITECTURE.md  DATA_MODEL.md  GENERATION_PIPELINE.md  RENDERING.md
examples/: README.md  coffee_beans.json  kyoto_weekend.json  python_intro.json  rust_order_system.json
templates/layouts/: agenda.json  big_idea.json  cards.json  cards_2up.json  closing.json  comparison.json  cover.json  cover_centered.json  data.json  data_big_number.json  process.json  quote.json  section.json  summary.json  timeline.json
templates/presets/: README.md  presets.json
templates/themes/: consumer.json  exec_report.json  generic.json  pitch_bold.json  review_warm.json  teaching.json  tech_dark.json  travel_warm.json
tests/: test_cli.py  test_cli_input_validation.py  test_cli_outline.py  test_cli_provider.py  test_cli_revise.py  test_examples.py  test_factory.py  test_loader_resilience.py  test_pipeline.py  test_revise.py
tests/asset_engine/: test_asset_engine.py  test_asset_scoring.py  test_backgrounds.py  test_icons.py
tests/benchmark/: test_collector.py  test_quality.py
tests/core/: test_benchmark_models.py  test_deck_roundtrip.py  test_geometry.py  test_layout_asset.py  test_migrations.py  test_slides.py  (+1 more)
(+37 files in other folders)
