[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aippt"
version = "1.0.0"
description = "AI 演示稿生成器：单命令吃 JSON 吐一套风格一致、叙事连贯的 .pptx"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "python-pptx>=0.6.23",
    "Pillow>=10.0",
    "tenacity>=8.2",
    "jsonschema>=4.21",
    "typer>=0.12",
]

[project.optional-dependencies]
# 真实 LLM provider（按需启用，成本对比用；不配 key/不加 --provider 时不联网）
llm = ["openai>=1.30", "anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
aippt = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["packages*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["demos", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["packages"]
exclude = "(demos|\\.venv)"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.coverage.run]
source = ["packages"]
